--- a/lightning-docs/blog/authors.yml
+++ b/lightning-docs/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+halonso: 
+  name: Héctor Alonso
+  title: Creator of Lightning
+  url: https://github.com/HectorAlonso18
+  image_url: https://media.licdn.com/dms/image/D4E03AQFZP93e5neIjQ/profile-displayphoto-shrink_800_800/0/1710448737433?e=1727913600&v=beta&t=lgB1zRHG5UqgKW0l3ZW5g-QLnf4T-GVv5IdK1RJp_8g
