--- a/lightning-docs/blog/tags.yml
+++ b/lightning-docs/blog/tags.yml
@@ -14,3 +14,11 @@ hola:
   label: Hola
   permalink: /hola
   description: Hola tag description
+lightning: 
+  label: Lightning
+  permalink: /lightning
+  description: Lightning is an easy and powerful PROS template that users can use to program more advanced autonomous routines.
+release: 
+  label: Release
+  permalink: /release
+  description: Lightning realeses can be found here:https://github.com/HectorAlonso18/Lightninglib/releases
